[metadata]
name = prettyplease
version = 0.11.2
author = Isak Svensson
author_email = isak.svensson@chalmers.se
description = Create pretty corner plots.
long_description = file: README.md
long_description_content_type = text/plain
url = https://github.com/svisak/prettyplease
project_urls =
    Bug Tracker = https://github.com/svisak/prettyplease/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    matplotlib

[options.packages.find]
where = src
